# wmg_feedback_gen

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: demo_alternative_template.docx  demo_alternative_template.py  demo_feedback.py  demo_feedback_template.docx  demo_gui.py  demo_marks.xlsx
src/wmg_feedback_gen/: __init__.py  core.py  document_generator.py
tests/: __init__.py  test_core.py  test_document_generator.py
